# trs_filer/api/additions.openapi.yaml
@@ -1,19 +1,22 @@
 paths:
-  "/tools/":
+  /tools:
     post:
-      description: Create a tool object.
-      operationId: addTool
+      summary: Create a tool.
+      description: Create a tool object with a randomly generated unique ID.
+      operationId: postTool
+      tags:
+        - TRS-Filer
       requestBody:
-        description: Tool to add to the TRS store
+        description: Tool (meta)data to add.
         required: true
         content:
           application/json:
             schema:
               x-body-name: tool
-              $ref: '#/components/schemas/ToolPost'
+              $ref: '#/components/schemas/ToolRegister'
       responses:
         '200':
-          description: The `TrsObject` was successfully created.
+          description: The tool was successfully created.
           content:
             application/json:
               schema:
@@ -44,13 +47,30 @@ paths:
                 $ref: '#/components/schemas/Error'
 components:
   schemas:
-    ToolPost:
+    ToolClass:
+      type: object
+      description: Describes a class (type) of tool allowing us to categorize
+        workflows, tasks, and maybe even other entities (such as services)
+        separately.
+      properties:
+        id:
+          type: string
+          description: The unique identifier for the class.
+        name:
+          type: string
+          description: A short friendly name for the class.
+        description:
+          type: string
+          description: A longer explanation of what this class is and what it can
+            accomplish.
+    ToolRegister:
       type: object
       description: A tool (or described tool) is defined as a tuple of a descriptor
         file (which potentially consists of multiple files), a set of container
         images, and a set of instructions for creating those images.
       required:
         - organization
+        - toolclass
         - versions
       properties:
         aliases:
@@ -76,9 +96,14 @@ components:
         name:
           type: string
           description: The name of the tool.
+        toolclass:
+          $ref: "#/components/schemas/ToolClass"
         description:
           type: string
           description: The description of the tool.
+        has_checker:
+          type: boolean
+          description: Whether this tool has a checker tool associated with it.
         checker_url:
           type: string
           description: Optional url to the checker tool that will exit successfully if
@@ -87,9 +112,6 @@ components:
           type: string
           description: The version of this tool in the registry. Iterates when fields like
             the description, author, etc. are updated. 
-            
-            Unless provided, it is attempted to parse the latest version from the meta_version
-            properties of the available versions. Unset if the latest version cannot be determined.
         versions:
           description: A list of versions for this tool.
           type: array
@@ -110,6 +132,13 @@ components:
         name:
           type: string
           description: The name of the version.
+        id:
+          type: string
+          description: A unique identifier of the version of this tool for this particular
+            tool registry. If not provided, will be auto-generated by the implementation.
+            Note that a `BadRequest` will be returned if multiple versions with the same
+            `id` properties are provided.
+          example: v1
         is_production:
           type: boolean
           description: This version of a tool is guaranteed to not change over time (for
@@ -124,6 +153,10 @@ components:
           type: string
           description: The version of this tool version in the registry. Iterates when
             fields like the description, author, etc. are updated.
+        verified:
+          type: boolean
+          description: Reports whether this tool has been verified by a specific
+            organization or individual.
         verified_source:
           type: array
           items:
